fix: update model in smartcat prompts and mark yazi subprojects as dirty
Updated the model in smartcat prompts from "meta-llama/llama-4-scout:free" to "meta-llama/llama-4-maverick:free".

Refs: # config changes for smartcat

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -21,11 +21,39 @@
 [status]
 	branch = true
 	showStash = true
-	
+	showUntrackedFiles = all
 
-[url "git@github.com:lakubudavid/"]
+[diff]
+	context = 3
+	renames = copies
+	interHunkContext = 10
+
+[color "diff"]
+	meta = white bold
+	frag = magenta
+	context = white
+	whitespace = yellow reverse
+	old = red
+
+[push]
+	autoRemote = true
+	default = current
+	followTags = true
+
+[pull]
+	default = true
+	rebase = true
+
+[rebase]
+	autoStash = true
+	missingCommitsCheck = warn
+
+[pager]
+	diff = delta --diff-so-fancy
+
+[url "https://github.com/lakubudavid/"]
 	insteadOf = ld:
-[url "git@github.com:Solution-Inc/"]
+[url "https://github.com/Solution-Inc/"]
 	insteadOf = solution:
-[url "git@github.com:"]
+[url "https://github.com/"]
 	insteadOf = gh:
