--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -63,10 +63,10 @@ display-messages = true
 min-width = 1
 [keys.normal]
 "C-q" = ":bc"
-# "C-j" = ":sh zellij run -f -x 10% -y 10% --width 80% --height 80% -- bash ~/.config/helix/yazi-picker.sh"
-"C-j" = [":new", ":insert-output yazi", ":buffer-close!", ":redraw"]
-# "C-l" = ":sh zellij run -f -x 15% -y 15% --width 70% --height 70% -- bash ~/.config/helix/lazygit-popup.sh"
-"C-l" = [":new", ":insert-output lazygit", ":buffer-close!", ":redraw"]
+"C-j" = ":sh zellij run -f -x 10% -y 10% --width 80% --height 80% -- zsh -c -i ~/.config/helix/yazi-picker.sh"
+# "C-j" = [":new", ":insert-output yazi", ":buffer-close!", ":redraw"]
+"C-l" = ":sh zellij run -f -x 15% -y 15% --width 70% --height 70% -- zsh -c -i ~/.config/helix/lazygit-popup.sh"
+# "C-l" = [":new", ":insert-output lazygit", ":buffer-close!", ":redraw"]
 # "C-f" = ":sh zellij run -f -x 15% -y 15% --width 70% --height 70% -- bash ~/.config/helix/serpl-popup.sh"
 # "C-f" = [":new", ":insert-output serpl", ":buffer-close!", ":redraw"]
 # "C-v" = [":new", ":insert-output yazi", ":buffer-close!", ":redraw"]
